# building-serverless-using-iac

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml
aws-sam-src/hello-sam/: README.md
aws-sam-src/start-here-step1/: samconfig.toml  template.yaml
aws-sam-src/step1-finish/: samconfig.toml  template.yaml
aws-sam-src/step2-finish/: template.yaml
aws-sam-src/step3-finish/: template.yaml
aws-sam-src/step3-finish/add_subscriber/: app.py
aws-sam-src/step4-finish/: samconfig.toml  template.yaml
cdk-src/add-construct-finish/: requirements.txt
cdk-src/lambda-api-gateway/: app.py
cdk-src/lambda-api-gateway-start-here/: app.py  cdk.json  requirements.txt
docs/: index.md  what-is-iac.md
docs/aws-sam/: add-authorizer.md  add-subscribers.md  deletion.md  get-subscribers.md  hello-sam.md  schedule-message.md  send-message.md
docs/cdk/: adding-layer.md  deletion.md  finish-them.md  hello-cdk.md  iac-encapsulation.md  lambda-api-gateway.md
docs/serverless/: serverless-services.md  what-is-serverless.md
hello-sam/: template.yaml
scripts/: update_python_on_cloud9.sh
start-here-step1/: samconfig.toml  template.yaml
step1-finish/: template.yaml
step2-finish/: template.yaml
step3-finish/: template.yaml
step3-finish/schedule_message/: app.py
step4-finish/: template.yaml
step4-finish/get_subscribers/: app.py
user-group/: template.yaml
user-group/add_subscriber/: app.py
user-group/get_subscribers/: app.py
user-group/send_scheduled_messages/: app.py
user-group/utils/: api_gw_helpers.py  consts.py  general.py
(+18 files in other folders)
