[tool.poetry]
name = "building-serverless-using-iac"
version = "0.1.1"
description = "Build serverless application using AWS SAM and CDK"
authors = ["Efi MK <efi.merdler@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
pillow = "^9.5.0"
cairosvg = "^2.7.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.165"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"